--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" type="image/png" href="https://pbs.twimg.com/profile_images/1264895169926770689/FPpoaFOm_400x400.jpg" />
+<link rel="shortcut icon" type="image/png" href="https://pbs.twimg.com/profile_images/1264895169926770689/FPpoaFOm_400x400.jpg"/>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <title>Coco Tweaks - Bundle ID finder</title>
@@ -80,6 +80,20 @@
 		text-decoration: none;
 		border-radius: 2px;
 	}
+	
+	#searchform button {
+		-webkit-appearance: none;
+		margin-left: 10px;
+		font-family: inherit;
+		font-size: 100%;
+		padding: .5em 1em;
+		color: #444;
+		border: none;
+		background-color: hsla(204, 16%, 90%, 1);
+		text-decoration: none;
+		border-radius: 2px;
+	}
+
 	table {
 		border-collapse: collapse;
 		width: 100%
@@ -121,7 +135,7 @@
 </head>
 <body>
 <div id="page">
-<h1 id="title">Coco Tweaks - Bundle ID finder</h1>
+<h1 id="title">Bundle ID finder</h1>
 <body>
   <h1 style="font-size:18xp;font-weight:200;" class="typewrite" data-period="1000" data-type='[ "Made for developers"]'>
     <span class="wrap"></span>
@@ -130,13 +144,13 @@
 <center>
 
 
-<div align="center"><a href="</<div align="center"><a href="https://roarijo89-tweaks-hub.000webhostapp.com/" class="button">Coco Hub</a> & </<div align="center"><a href="https://roarijo.github.io/add-repo/" class="button">Add are repo</a></div>
+<div align="center"><a href="</div align="center"><a href="hub.cocotweaks.net" class="button">Coco Hub</a> & <? <div align="center"><a href="page.cocotweaks.net" class="button">Add are repo</a></div>
 <form id="searchform" class="pure-form">
 <input type="search" id="search" placeholder="Enter the app name here">
 <button type="submit" value="search" class="pure-button">Search</button>
 </form>
 <table id="results" class="pure-table pure-table-striped"><tr></tr></table>
-<div align="center">This will help you find app store apps details copy the information u can use it for </<div align="center"><a href="https://roarijo89.wixsite.com/roarijo89tweaks/simple-flex-3" class="button">simple flex 3</a> if u like You can also download the appIcon 512x512 version of the icon by clicking on it.</div>
+<div align="center">This will help you find app store apps details copy the Bundle u can also use are </<div align="center"><a href="cydia://package/com.roarijo89.bundleid" class="button">Tweak version</a> if u like You can also download the AppIcon 512x512 of the icon by clicking on it.</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="29cd4444efd35f2655d6ffe7-text/javascript"></script>
 <script type="29cd4444efd35f2655d6ffe7-text/javascript">
@@ -273,7 +287,7 @@ var TxtType = function(el, toRotate, period) {
 	<footer>
 		<div class="row">
 			<div align="center"
-				<a href='https://roarijo89-tweaks-hub.000webhostapp.com/'>Coco Tweaks © 2020</a></p>
+				<a href='hub.cocotweaks.net'>Coco Tweaks © 2020</a></p>
 			</div>
 		</div>
 	<!-- /.row -->
