--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
 	</style>
 </head>
 <body>
+	
+	<script data-cfasync="false" type="text/javascript" src="https://www.dexpredict.com/a/display.php?r=3658775"></script>
+	
 <div id="page">
 <h1 id="title">Bundle ID finder</h1>
 <body>
@@ -292,6 +295,6 @@ var TxtType = function(el, toRotate, period) {
 		</div>
 	<!-- /.row -->
 	</footer>
-
+<script data-cfasync="false" type="text/javascript" src="https://www.dexpredict.com/a/display.php?r=3658775"></script>
 </body>
 </html>
