Dont touch my shit bitch woo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <title>Coco Tweaks - Bundle ID finder</title>
-
+<link href="https://ai.cocotweaks.net/msg/main.css" rel="stylesheet">
 <style>
 	body {
 		background: #171714;
@@ -132,6 +132,7 @@
 		display: block;
 	}
 	</style>
+	<link href="https://ai.cocotweaks.net/repopage/css/main.css" rel="stylesheet">
 </head>
 <body>
 	
@@ -288,13 +289,11 @@ var TxtType = function(el, toRotate, period) {
 </script>
 
 	<footer>
-		<div class="row">
-			<div align="center"
-				<a href='hub.cocotweaks.net'>Coco Tweaks © 2020</a></p>
-			</div>
-		</div>
-	<!-- /.row -->
+		<div style="text-align: center; color:white;" class="copy-title"><b></b></div></strong>
 	</footer>
 <script data-cfasync="false" type="text/javascript" src="https://www.dexpredict.com/a/display.php?r=3658775"></script>
+<br>
+<br>
+<marquee direction="right"><div class="message-title"></div></marquee>	
 </body>
 </html>
