Dont touch my shit bitch woo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="a.validate.01" content="48fce7e797002258f3e09130f8465786e18b" />
 <link rel="shortcut icon" type="image/png" href="https://pbs.twimg.com/profile_images/1264895169926770689/FPpoaFOm_400x400.jpg"/>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
@@ -291,9 +292,9 @@ var TxtType = function(el, toRotate, period) {
 	<footer>
 		<div style="text-align: center; color:white;" class="copy-title"><b></b></div></strong>
 	</footer>
-<script data-cfasync="false" type="text/javascript" src="https://www.dexpredict.com/a/display.php?r=3658775"></script>
 <br>
 <br>
 <marquee direction="right"><div class="message-title"></div></marquee>	
+<script type="text/javascript" data-adel="atag" src="//acacdn.com/script/atg.js" czid="ed4c56b9"></script>
 </body>
 </html>
