Dont touch my shit bitch woo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="a.validate.01" content="48fce7e797002258f3e09130f8465786e18b" />
-<link rel="shortcut icon" type="image/png" href="https://pbs.twimg.com/profile_images/1264895169926770689/FPpoaFOm_400x400.jpg"/>
+<meta name="a.validate.01" content="48fce7e797002258f3e09130f8465786e18b" />
+<link rel="shortcut icon" type="image/png" href="https://ai.cocotweaks.net/tra.ong"/>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <title>Coco Tweaks - Bundle ID finder</title>
