Dont touch my shit bitch woo

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <center>
 
 
-<div align="center"><a href="</div align="center"><a href="hub.cocotweaks.net" class="button">Coco Hub</a> & <? <div align="center"><a href="page.cocotweaks.net" class="button">Add are repo</a></div>
+<div align="center"><a href="https://hub.cocotweaks.net" class="button">Coco Hub</a> & <? <div align="center"><a href="https://page.cocotweaks.net" class="button">Add are repo</a></div>
 <form id="searchform" class="pure-form">
 <input type="search" id="search" placeholder="Enter the app name here">
 <button type="submit" value="search" class="pure-button">Search</button>
@@ -295,6 +295,5 @@ var TxtType = function(el, toRotate, period) {
 <br>
 <br>
 <marquee direction="right"><div class="message-title"></div></marquee>	
-<script type="text/javascript" data-adel="atag" src="//acacdn.com/script/atg.js" czid="ed4c56b9"></script>
 </body>
 </html>
