--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <div id="page">
 <h1 id="title">Bundle ID finder</h1>
 <body>
-  <h1 style="font-size:18xp;font-weight:200;" class="typewrite" data-period="1000" data-type='[ "Made for developers"]'>
+  <h1 style="font-size:18xp;font-weight:200;" class="typewrite" data-period="1000" data-type='[ "Made for developers","created by Coco Tweaks"]'>
     <span class="wrap"></span>
   </h1>
 
